--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <h1 class="title">Cotao.dev</h1>
   <h2 class="subtitle">Transforming Ideas into apps</h2>
   <p class="description">
-    Got an idea? We’ll help make it real. Create straightforward, user-friendly apps tailored to your needs. No fuss, no jargon—just great apps built to do exactly what you need them to do.
+    Discover a curated collection of ready-to-use, AI-powered apps designed to streamline your daily tasks and boost efficiency. Each app is fully functional, intuitive, and available for download—your ultimate destination for cutting-edge digital tools.
   </p>
   <a class="cta-button" href="mailto:cotao.dev@gmail.com?subject=Support%20from%20Landing">
     Get Started
