--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="https://www.backtoit.io/" class="image"><img src="images/backtoit.png" alt="" /></a>
+									<a href="https://www.backtoit.io/" class="image custom-right"><img src="images/backtoit.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Back to it (acq)</h2>
 										<p>All your get back tos stored in one place. Backtoit gives you a fast and easy way to collect, organize, and bookmark any link on the web.
@@ -46,7 +46,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="https://snaptalky.com/" class="image"><img src="images/snaptalky.png" alt="" /></a>
+									<a href="https://snaptalky.com/" class="image custom-left"><img src="images/snaptalky.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Snaptalky</h2>
 										<p>Elevate your conversations with smart replies. Simply share your chat and crafts replies that learn from your responses and adapt to your context.
@@ -60,7 +60,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image disabled"><img src="images/instacalorie.png" alt="" /></a>
+									<a href="#" class="image disabled custom-right"><img src="images/instacalorie.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Instacalorie</h2>
 										<p>Effortlessly track your nutrition with Instacalorie. Simply snap a photo of your meal, and the app instantly analyzes it to count all the calories and macros.
