Rename repo and add new changes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-		<title>Cotao.dev</title>
+		<title>ElevApps</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="icon" type="image/png" href="./images/icon.png" />
@@ -21,7 +21,7 @@
 							<div class="logo">
 								<img src="./images/logo.png" alt="Company Logo" class="logo-img" width="100" height="100">
 							</div>
-							<h2>Cotao.dev</h2>
+							<h2 class="title">ElevApps</h2>
 							<p>A collection of apps designed to streamline your daily tasks.</p>
 						</div>
 					</section>
@@ -98,7 +98,7 @@
 								</ul>
 							</form>
 							<ul class="copyright">
-								<li>&copy; Cotao.dev all rights reserved.</li><li class="date-custom-footer"></li>
+								<li>&copy; ElevApps all rights reserved.</li><li class="date-custom-footer"></li>
 							</ul>
 						</div>
 					</section>
