Update branding and refine styles in index and CSS
Adjusted logo dimensions and removed border in CSS for cleaner design. Updated app names and corrected titles in the HTML for consistency. Minor tweaks ensure visual improvements and alignment with branding guidelines.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 							<div class="logo">
 								<img src="./images/logo.png" alt="Company Logo" class="logo-img" width="100" height="100">
 							</div>
-							<h2 class="title">ElevApps</h2>
+							<h2 class="title">Elevapps</h2>
 							<p>A collection of apps designed to streamline your daily tasks.</p>
 						</div>
 					</section>
@@ -34,7 +34,7 @@
 								<div class="inner">
 									<a href="https://www.backtoit.io/" class="image custom-right"><img src="images/backtoit.png" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Back to it (acq)</h2>
+										<h2 class="major">Backtoit (acquired)</h2>
 										<p>All your get back tos stored in one place. Backtoit gives you a fast and easy way to collect, organize, and bookmark any link on the web.
 											<br /> <span class="tech">(Tech: Next, Node, Mongo, Vercel)</span>
 										</p>
@@ -98,7 +98,7 @@
 								</ul>
 							</form>
 							<ul class="copyright">
-								<li>&copy; ElevApps all rights reserved.</li><li class="date-custom-footer"></li>
+								<li>&copy; Elevapps all rights reserved.</li><li class="date-custom-footer"></li>
 							</ul>
 						</div>
 					</section>
