new app redesign

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 							</div>
 							<h2 class="title">Elevapps</h2>
 							<p>A collection of apps designed to streamline your daily tasks.</p>
+							<p>Innovative web applications, designing professional web pages, and providing web engineering consulting services.</p>
 						</div>
 					</section>
 
@@ -52,7 +53,8 @@
 										<p>Elevate your conversations with smart replies. Simply share your chat and crafts replies that learn from your responses and adapt to your context.
 											<br /> <span class="tech">(Tech: React Native, Go, Postgres, Digital Ocean)</span>
 										</p>
-										<a href="https://snaptalky.com/" class="special">Learn more</a>
+<!--										<a href="https://snaptalky.com/" class="special">Learn more</a>-->
+												<a class="special disabled">Coming soon...</a>
 									</div>
 								</div>
 							</section>
@@ -77,7 +79,8 @@
 					<section id="footer">
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
-							<p>Have questions or feedback? Drop us a line below, and we’ll get back to you as soon as possible.</p>
+							<p>Have questions, feedback, or need assistance with your web services?
+								Drop us a line below, and we’ll get back to you.</p>
 							<form action="https://formspree.io/f/xvgoqoyj" method="POST" id="contact-form">
 								<div class="fields">
 									<div class="field">
@@ -98,7 +101,9 @@
 								</ul>
 							</form>
 							<ul class="copyright">
-								<li>&copy; Elevapps all rights reserved.</li><li class="date-custom-footer"></li>
+								<li>&copy; Elevapps all rights reserved</li>
+								<li>30 N Gould St Ste N, Sheridan, WY 82801 USA</li>
+								<li class="date-custom-footer"></li>
 							</ul>
 						</div>
 					</section>
