--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							</div>
 							<h2 class="title">Elevapps</h2>
 							<p>A collection of apps designed to streamline your daily tasks.</p>
-							<p>Innovative web applications, designing professional web pages, and providing web engineering consulting services.</p>
+							<p>Innovative web applications, designing professional pages, and providing web engineering consulting services.</p>
 						</div>
 					</section>
 
