--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 							<h2 class="major">Get in touch</h2>
 							<p>Have questions, feedback, or need assistance with your web services?
 								Drop us a line below, and we’ll get back to you.</p>
-							<form action="https://formspree.io/f/xvgoqoyj" method="POST" id="contact-form">
+							<form action="https://formspree.io/f/xkgozkgo" method="POST" id="contact-form">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
@@ -131,7 +131,7 @@
 					event.preventDefault();
 
 					$.ajax({
-						url: 'https://formspree.io/f/xvgoqoyj',
+						url: 'https://formspree.io/f/xkgozkgo',
 						method: 'POST',
 						data: $(this).serialize(),
 						dataType: 'json',
