Update branding, assets, and app descriptions
Replaced outdated images with new assets for improved visuals and branding consistency. Updated app descriptions, titles, and links in `index.html`. Adjusted CSS to refine logo styling and remove unnecessary properties.

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 					<section id="banner">
 						<div class="inner">
 							<div class="logo">
-								<img src="./images/logo.png" alt="Company Logo" class="logo-img" width="100" height="100">
+								<img src="./images/logos/logo-black.png" alt="Company Logo" class="logo-img" width="159" height="176">
 							</div>
 							<h2 class="title">Elevapps</h2>
-							<p>A collection of apps designed to streamline your daily tasks.</p>
-							<p>Innovative web applications, designing professional pages, and providing web engineering consulting services.</p>
+							<p>A collection of apps designed to streamline your daily tasks</p>
+<!--							<p>Innovative web applications, designing professional pages, and providing web engineering consulting services.</p>-->
 						</div>
 					</section>
 
@@ -33,13 +33,13 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="https://www.backtoit.io/" class="image custom-right"><img src="images/backtoit.png" alt="" /></a>
+									<a href="https://layerdolls.com" class="image custom-right"><img src="images/layerdolls2.png" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Backtoit (acquired)</h2>
-										<p>All your get back tos stored in one place. Backtoit gives you a fast and easy way to collect, organize, and bookmark any link on the web.
-											<br /> <span class="tech">(Tech: Next, Node, Mongo, Vercel)</span>
+										<h2 class="major">Layerdolls</h2>
+										<p>All your get back tos stored in one place. Layerdolls gives you a fast and easy way to collect, organize, and bookmark any link on the web.
+											<br /> <span class="tech">(Tech: React, Go, Postgres)</span>
 										</p>
-										<a href="https://www.backtoit.io/" class="special">Learn more</a>
+										<a href="https://layerdolls.com" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
@@ -47,14 +47,13 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="https://snaptalky.com/" class="image custom-left"><img src="images/snaptalky.png" alt="" /></a>
+									<a href="https://snaptalky.com/" class="image custom-left"><img src="images/snaptalky2.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Snaptalky</h2>
 										<p>Elevate your conversations with smart replies. Simply share your chat and crafts replies that learn from your responses and adapt to your context.
-											<br /> <span class="tech">(Tech: React Native, Go, Postgres, Digital Ocean)</span>
+											<br /> <span class="tech">(Tech: SwiftUI, Go, Postgres)</span>
 										</p>
-<!--										<a href="https://snaptalky.com/" class="special">Learn more</a>-->
-												<a class="special disabled">Coming soon...</a>
+										<a href="https://snaptalky.com" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
@@ -62,13 +61,13 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image disabled custom-right"><img src="images/instacalorie.png" alt="" /></a>
+									<a href="#" class="image disabled custom-right"><img src="images/instacalorie2.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Instacalorie</h2>
 										<p>Effortlessly track your nutrition with Instacalorie. Simply snap a photo of your meal, and the app instantly analyzes it to count all the calories and macros.
-											<br /> <span class="tech">(Tech: React Native, Go, Postgres, Digital Ocean)</span>
+											<br /> <span class="tech">(Tech: SwiftUI, Go, Postgres)</span>
 										</p>
-										<a class="special disabled">Coming soon...</a>
+										<a href="https://instacalorie.com" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
