--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-		<title>ElevApps</title>
+		<title>Elevapps - A collection of apps designed to streamline your daily tasks</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="A collection of apps designed to streamline your daily tasks. Innovative web applications including Layerdolls, Snaptalky, and Instacalorie." />
+		<meta name="keywords" content="apps, web applications, productivity, Layerdolls, Snaptalky, Instacalorie" />
+		<meta name="author" content="Elevapps" />
+		<link rel="canonical" href="https://elevapps.co/" />
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://elevapps.co/" />
+		<meta property="og:title" content="Elevapps - A collection of apps designed to streamline your daily tasks" />
+		<meta property="og:description" content="A collection of apps designed to streamline your daily tasks. Innovative web applications including Layerdolls, Snaptalky, and Instacalorie." />
+		<meta property="og:image" content="https://elevapps.co/images/logos/logo-black.png" />
+		<meta property="og:site_name" content="Elevapps" />
+
+		<!-- Twitter -->
+		<meta name="twitter:card" content="summary" />
+		<meta name="twitter:url" content="https://elevapps.co/" />
+		<meta name="twitter:title" content="Elevapps - A collection of apps designed to streamline your daily tasks" />
+		<meta name="twitter:description" content="A collection of apps designed to streamline your daily tasks. Innovative web applications including Layerdolls, Snaptalky, and Instacalorie." />
+		<meta name="twitter:image" content="https://elevapps.co/images/logos/logo-black.png" />
+
 		<link rel="icon" type="image/png" href="./images/icon.png" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/custom.css" />
-		<meta property="og:image" content="https://cotao.dev/images/logo.png" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
