Update images for Layerdolls and Snaptalky sections in index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="https://layerdolls.com" class="image custom-right"><img src="images/layerdolls2.png" alt="" /></a>
+									<a href="https://layerdolls.com" class="image custom-right"><img src="images/layerdolls.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Layerdolls</h2>
 										<p>All your get back tos stored in one place. Layerdolls gives you a fast and easy way to collect, organize, and bookmark any link on the web.
@@ -66,7 +66,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="https://snaptalky.com/" class="image custom-left"><img src="images/snaptalky2.png" alt="" /></a>
+									<a href="https://snaptalky.com/" class="image custom-left"><img src="images/snaptalky.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Snaptalky</h2>
 										<p>Elevate your conversations with smart replies. Simply share your chat and crafts replies that learn from your responses and adapt to your context.
