--- a/index.html
+++ b/index.html
@@ -80,13 +80,29 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image disabled custom-right"><img src="images/instacalorie2.png" alt="" /></a>
+									<a href="#" class="image disabled custom-right"><img src="images/planeclip.png" alt="" /></a>
+									<div class="content">
+										<h2 class="major">Planeclip</h2>
+										<p>Your all in one flight companion. Real time updates, instant alerts, and delay predictions, so you're always the first to know and rebook.
+											<br /> <span class="tech">(Tech: SwiftUI, Go, Postgres)</span>
+										</p>
+<!--										<a href="https://planeclip.com" class="special">Learn more</a>-->
+										<a class="special disabled">Coming soon...</a>
+									</div>
+								</div>
+							</section>
+
+						<!-- Four -->
+							<section id="four" class="wrapper alt spotlight style4">
+								<div class="inner">
+									<a href="#" class="image disabled custom-left"><img src="images/instacalorie2.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Instacalorie</h2>
 										<p>Effortlessly track your nutrition with Instacalorie. Simply snap a photo of your meal, and the app instantly analyzes it to count all the calories and macros.
 											<br /> <span class="tech">(Tech: SwiftUI, Go, Postgres)</span>
 										</p>
-										<a href="https://instacalorie.com" class="special">Learn more</a>
+<!--										<a href="https://instacalorie.com" class="special">Learn more</a>-->
+										<a class="special disabled">Coming soon...</a>
 									</div>
 								</div>
 							</section>
